# embedded-nano-mesh

./: CHANGELOG.txt  Cargo.toml  README.md  rust-toolchain.toml  todo.txt
.cargo/: config.toml
.github/: funding.yml
examples/: empty_node.rs  receive.rs  send.rs  send_in_a_loop.rs  send_ping_pong.rs  send_ping_pong_in_a_loop.rs  send_transaction_in_a_loop.rs  send_with_transaction.rs
src/: .main.rs  atmega328p_time.rs  lib.rs  main.rs  millis.rs  platform_specific_millis_timer.rs  serial.rs
src/mesh_lib/: mod.rs
src/mesh_lib/millis/: atmega328p.rs  mod.rs  traits.rs  types.rs
src/mesh_lib/node/: config.rs  constants.rs  mod.rs  transmitter.rs  types.rs
src/mesh_lib/node/packet/: config.rs  constants.rs  mod.rs  traits.rs  types.rs
src/mesh_lib/node/packet/implementations/: checksum.rs  getters_setters.rs  is_destination_reached.rs  lifetime.rs  mod.rs  mutated.rs  spec_state.rs
src/mesh_lib/node/packet/meta_data/: mod.rs
src/mesh_lib/node/packet/trait_implementations/: data_packer.rs  getters_setters.rs  mod.rs  packet_flag_ops.rs  serializer.rs  state_mutator.rs  unique_id_extractor.rs
src/mesh_lib/node/packet/traits/: data_packer.rs  flag_ops.rs  from_bytes.rs  getters_setters.rs  mod.rs  serializer.rs  state_mutator.rs  unique_id_extractor.rs
src/mesh_lib/node/receiver/: mod.rs  packet_bytes_parser.rs  packet_filter.rs
src/mesh_lib/node/router/: mod.rs  types.rs
src/mesh_lib/node/timer/: mod.rs
src/mesh_lib/serial/: avr_serial.rs
src/mesh_lib/transciever/: config.rs  mod.rs  transmitter.rs  types.rs
src/mesh_lib/transciever/packet/: bitpos.rs  mod.rs  traits.rs  types.rs
src/mesh_lib/transciever/receiver/: mod.rs  packet_bytes_parser.rs  packet_filter.rs
src/mesh_lib/transciever/router/: mod.rs  types.rs
src/mesh_lib/transciever/special_packet_handler/: mod.rs  types.rs
src/mesh_lib/transciever/special_packet_manager/: mod.rs  types.rs
src/mesh_lib/transciever/timer/: mod.rs
src/millis/: atmega328p.rs  mod.rs
src/packet/: config.rs  mod.rs  traits.rs  types.rs
src/serial/: avr_serial.rs  mod.rs
src/transciever/: config.rs  mod.rs  receiver.rs  sender.rs  transmitter.rs  types.rs
src/transciever/packet/: config.rs  mod.rs  traits.rs  types.rs
src/transciever/receiver/: mod.rs  packet_bytes_parser.rs
src/transciever/timer/: mod.rs
tests/: test_1_to_1_ignore_duplication.rs  test_1_to_1_simple.rs  test_1_to_1_with_255_other_devices.rs  test_2_to_1_ignore_duplication.rs  test_2_to_1_simple.rs  test_packet_travel_2_hops.rs  test_packet_travel_2_hops_lifetime_ended.rs  test_ping_pong_simple.rs  test_ping_pong_travel_2_hops.rs  test_ping_pong_travel_2_hops_lifetime_ended.rs  test_to_self_ignore_duplication.rs  test_to_self_simple.rs  test_transaction_simple.rs  test_transaction_travel_2_hops.rs  test_transaction_travel_2_hops_lifetime_ended.rs
