[package]
name = "embedded-nano-mesh"
version = "0.1.2"
authors = ["Yevhen Shevchenko (boshtannik) <boshtannik@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Lightweight mesh communication protocol for embedded devices"
readme = "README.md"
repository = "https://github.com/boshtannik/NanoMesh/"
keywords = ["serial", "mesh", "protocol", "network", "embedded"]
categories = ["embedded", "no-std", "network-programming"]

# as a library
[lib]
name = "embedded_nano_mesh"
path = "src/lib.rs"
test = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.2"
nb = "0.1.3"
heapless = { version = "0.7.0", features = ["serde", "ufmt-impl"] }
embedded-hal = "0.2.7"
platform-millis = "1.0.0"
platform-serial = "1.0.0"

# platform-millis-arduino-nano = { git = "https://github.com/boshtannik/platform-millis-arduino-nano.git" }
# platform-serial-arduino-nano = { git = "https://github.com/boshtannik/platform-serial-arduino-nano.git" }

# [dependencies.arduino-hal]
# git = "https://github.com/rahix/avr-hal"
# rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
# features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[features]
serial_debug = []
# default = ["serial_debug"]
