[package]
name = "embedded-nano-mesh"
version = "1.1.1"
authors = ["Yevhen Shevchenko (boshtannik) <boshtannik@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Lightweight mesh communication protocol for embedded devices"
readme = "README.md"
repository = "https://github.com/boshtannik/NanoMesh/"
keywords = ["serial", "mesh", "protocol", "network", "embedded"]
categories = ["embedded", "no-std", "network-programming"]

# as a library
[lib]
name = "embedded_nano_mesh"
path = "src/lib.rs"
test = false

[dependencies]
ufmt = "0.2.0"
nb = "0.1.3"
heapless = { version = "0.7.0", features = ["serde", "ufmt-impl"] }

platform-millis = "2.0.0"
platform-serial = "1.0.2"
